--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ dependencies:
 
 test:
   override: 
+    - sbt -sbt-version $SBT_VERSION coverage "partest --specialized"
     - sbt -sbt-version $SBT_VERSION coverage junit/test
     - sbt -sbt-version $SBT_VERSION coverageReport
     - sbt -sbt-version $SBT_VERSION coverageAggregate
@@ -75,3 +76,5 @@ test:
     - mv target/scala-2.10/scoverage-report/scoverage.xml $CIRCLE_ARTIFACTS/scoverage.xml
     - mkdir -p $CIRCLE_TEST_REPORTS/junit
     - find . -type f -regex "target/junit/test-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+    - mkdir -p $CIRCLE_TEST_REPORTS/partest/specialized
+    - find . -type f -regex "target/test/test-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/partest/specialized/ \;
