--- a/circle.yml
+++ b/circle.yml
@@ -25,10 +25,10 @@ test:
     - sbt -sbt-version $SBT_VERSION coverage "partest --res"
     - sbt -sbt-version $SBT_VERSION coverage "partest --scalap"
     - sbt -sbt-version $SBT_VERSION coverage "partest --specialized"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --scalacheck"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --scalacheck"
     - sbt -sbt-version $SBT_VERSION coverage "partest --instrumented"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --presentation"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --jvm"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --presentation"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --jvm"
     - sbt -sbt-version $SBT_VERSION coverage junit/test
     - sbt -sbt-version $SBT_VERSION coverage "partest --neg"
     - sbt -sbt-version $SBT_VERSION coverage "partest --pos"
