More partest calls split ("res" and "scalap" categories). Disable "neg", "pos" and run" categories.

--- a/circle.yml
+++ b/circle.yml
@@ -191,20 +191,20 @@ test:
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/presentation/t8941"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/presentation/t8941b"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/presentation/visibility"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t5167.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t5489.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t597.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t6613.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t687.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t722.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t735.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t743.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t785.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t831.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t8871.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t9089.res"
-##    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t9170.res"
+#    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t5167.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t5489.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t597.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t6613.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t687.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t722.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t735.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t743.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t785.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t831.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t8871.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t9089.res"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/res/t9170.res"
 #    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --scalacheck"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalacheck/array-new.scala"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalacheck/array-old.scala"
@@ -230,7 +230,28 @@ test:
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalacheck/treemap.scala"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalacheck/treeset.scala"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalacheck/Unrolled.scala"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --scalap"
+#    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --scalap"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/abstractClass.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/abstractMethod.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/caseClass.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/caseObject.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/cbnParam.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/classPrivate.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/classWithExistential.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/classWithSelfAnnotation.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/covariantParam.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/defaultParameter.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/implicitParam.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/packageObject.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/paramClauses.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/paramNames.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/sequenceParam.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/simpleClass.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/t8679.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/traitObject.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/typeAnnotations.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/valAndVar.scala"
+    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/scalap/wildcardType.scala"
 #    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --specialized"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/specialized/arrays.scala"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/specialized/arrays-traits.scala"
@@ -255,9 +276,9 @@ test:
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/specialized/tc3651.scala"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/specialized/td3651.scala"
     - sbt -sbt-version $SBT_VERSION coverage "partest --verbose test/files/specialized/test.scala"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --neg"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --pos"
-    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --run"
+#    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --neg"
+#    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --pos"
+#    - sbt -sbt-version $SBT_VERSION coverage "partest --verbose --run"
     - sbt -sbt-version $SBT_VERSION coverageReport
     - sbt -sbt-version $SBT_VERSION coverageAggregate
   post:
